# dlg

./: .clang_complete  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  android_cross.txt  appveyor.yml  meson.build  meson_options.txt  sample.cpp  test.cpp
.github/workflows/: ci.yml
dlg/: color.hpp  config.hpp  dlg.cpp  dlg.hpp  fmt.hpp  output.hpp
doc/: example.cpp  test_aux.cpp  test_source.cpp
docs/: api.md  c_api.c  changelog.md  dlg_android.c  example.cpp  master.md  notes.md  smallfmt.cpp  todo.md  v0.1.md  v0.2.1.md  v0.2.md  v0.3.md
docs/c_api/: c_api.c  output.h
docs/examples/: chain.c  example.c  example.cpp
docs/tests/: basic.cpp  core.c  cpp.cpp  disabled.c  disabled.cpp  level.c  meson.build  outputf.cpp  threads.cpp
include/dlg/: config.h  config.hpp  dlg.h  dlg.hpp  fmt.hpp  output.h  output.hpp
src/dlg/: dlg.c  dlg.cpp
